<resources>
    <string name="app_name">FirstProject</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="btnGo">Войти</string>
    <string name="btnNext">Далее</string>
    <string name="btnExit">Выход</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="buttonToRegister">Зарегистрироваться</string>
    <string name="txtCheckIn">Регистрация</string>
    <string name="tvForgotPass">Забыли пароль?</string>
    <string name="etRepeatPass">Повторите пароль</string>
    <string name="email">Email</string>
    <string name="edit_text_Email">Email</string>
    <string name="btnRemindPassword">Напомнить пароль</string>
    <string name="buttonSend">Отправить сообщение</string>
    <string name="buttonCall">Позвнить</string>
    <string name="edittextMessage">Message</string>
    <string name="hintTelephoneNumber">Введите номер телефона</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_send_message">Введите ваше сообщение</string>
</resources>
